syntax = "proto3";

package uspb;

import "uspb/user.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/uspb";

message UpdateUserRequest {
  string username = 1;
  optional string fullName = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse { User user = 1; }